--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,15 @@
         <provider
             android:authorities="com.fitiwizz.mtbfollow.app"
             android:name=".data.WeatherProvider"
+            android:enabled="true"
+            android:exported="true"
             />
     </application>
+
+    <permission
+        android:name="com.fitiwizz.mtbfollow.LICENSE_TO_KILL"
+        android:protectionLevel="dangerous"
+        android:label="Licenced to Kill"
+        />
 
 </manifest>
